fix: metadata fixes for packs (#1224)
* fix: metadata fixes for packs

* Fix preview images are broken on pack creation page
* Extract metadata loading from update method in meta.tsx. Use separate useEffect to fetch metadata on token accounts or route page change.

* fix: back btn

--- a/js/packages/web/src/views/packCreate/index.less
+++ b/js/packages/web/src/views/packCreate/index.less
@@ -4,13 +4,18 @@
   .content-wrapper {
     flex: 1;
     padding: 0 48px;
+
+    .small-loader {
+      text-align: center;
+    }
   }
 }
 
 .notification-container {
   background-color: @grey-70;
   border-radius: 16px;
-  div, a {
+  div,
+  a {
     color: @grey-30;
   }
 }
